--- a/team_elektronik_software.html
+++ b/team_elektronik_software.html
@@ -201,8 +201,8 @@
                     <p> Die Sensorikgruppe wurde gegründet, um durch den Crawler zusätzliche Umgebungsinformationen zu erhalten. Zusätzlich soll durch Sensorinformationen wie z.B. Abstandswerte, die Bedienung des Crawlers über Visualisierungen auf der GUI vereinfacht werden.
                     <br>
                     <br>Stand der Dinge:
-                    <br>Zur Implementierung der Sensoren ist ein Raspberry Pi 3 vorgesehen, der die Signale mehrerer Sensoren verarbeitet. Es wurden unter anderen Infrarot Abstands-, Temperatur- und Gassensoren implementiert.
-                    <br>Die Datenkommunikation mit dem Industrie-PC soll mittels ROS realisiert werden, deshalb werden momentan die bestehenden Programme auf Kompatibilität mit ROS überprüft und adaptiert.
+                    <br>Zur Implementierung der Sensoren ist ein Raspberry Pi 3 vorgesehen, der die Signale mehrerer Sensoren verarbeitet. Es wurden unter anderen IR-Abstands-, Temperatur- und Gassensoren implementiert. Darüber hinaus werden Ultraschallsensoren zur Abstandsmessung bzw. Objekterkennung vorgesehen.
+                    <br>Die Datenkommunikation mit dem Industrie-PC ist mittels ROS realisiert worden, weshalb die bestehenden Programme ständig auf Kompatibilität mit ROS überprüft und adaptiert werden.
                     <br>Das Konzept der Sensorikgruppe sieht vor, dass zusätzliche Sensoren jederzeit eingebunden werden können.
                     </p>
                 </article>
