--- a/team_marketing_werbefilm.html
+++ b/team_marketing_werbefilm.html
@@ -128,7 +128,7 @@
                         <header>
                         </header>
                         <article>
-                            <img class="image fit" src="#" alt="Leider fehlt hier ein Bild"/>
+                            <img class="image fit" src="images/Gruppenbilder/WS1617/Marketing.JPG" alt="Leider fehlt hier ein Bild"/>
                         </article>
                         <div class="videoWrapper">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/BkNjO-ONMes" frameborder="0" allowfullscreen></iframe>
