--- a/sponsoren.html
+++ b/sponsoren.html
@@ -173,7 +173,7 @@
                     </header>-->
                 </article>
                 <article class="4u special">
-                    <a href="http://www.pulspower.com/" target="_blank" class="image featured"><img src="images/Sponsoren/Bosch_Rexroth.svg.png" alt="" />
+                    <a href="https://www.boschrexroth.com/" target="_blank" class="image featured"><img src="images/Sponsoren/Bosch_Rexroth.svg.png" alt="" />
                     </a>
                 </article>
             </div>
